--- a/plot_PreVsPostAnalysis_DayNight_Dec2019.Rmd
+++ b/plot_PreVsPostAnalysis_DayNight_Dec2019.Rmd
@@ -10,7 +10,7 @@ rm(list = ls())
 
 # ifelse(Sys.info()[1] == 'Linux',
 #        source('~/Documents/R/tools/TomosFunctions.R'),
-#        source('~/R/tools/TomosFunctions.R'))
+#        source('~/R/tools/TomosFunctions.R'))⌡
 
 #library(readxl)
 library(dplyr)
@@ -32,6 +32,11 @@ SDBay.gis <- spTransform(readOGR(dsn = "GISfiles",
 SDBay.df <- broom::tidy(SDBay.gis)
 water.color <- "lightblue"
 background.color <- "darkgray"
+eelgrass.color <- "mediumseagreen"
+post.50.color <- "blue4"
+post.95.color <- "lightcyan"
+pre.50.color <- "gold"
+pre.95.color <- "lightgoldenrod1"
 
 SDBay.eelg.2014 <- spTransform(readOGR(dsn = "GISfiles/Features",
                                        layer = "SD_Baywide_Eelgrass_2014_Final",
@@ -48,7 +53,7 @@ SDBay.eelg.2008.df <- broom::tidy(SDBay.eelg.2008)
 
 
 # internet <- F #TRUE
-save.fig <- T
+save.fig <- F
 
 # Minimum number of relocations per individual to be included in HR analysis
 min_n <- 50
@@ -103,20 +108,20 @@ p.KDE.pre.combined <- ggplot() +
                aes(x = long, y = lat,
                    group = group),
                color = "black",
-               fill = "lightgoldenrod1",
+               fill = pre.95.color,
                alpha = 0.4) +
 
   geom_polygon(data = KD.eachID.pre.combined$vert.50.df,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
-               fill = "gold",
+               fill = pre.50.color,
                alpha = 0.6) +
   geom_polygon(data = SDBay.eelg.2008.df,
                aes(x = long,
                    y = lat,
                    group = group),
-               fill = "green",
+               fill = eelgrass.color,
                alpha = 0.5) +
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
@@ -155,15 +160,21 @@ p.KDE.post.combined <- ggplot() +
                aes(x = long, y = lat,
                    group = group),
                color = "black",
-               fill = "lightgreen",
+               fill = "mediumpurple1",
                alpha = 0.4) +
 
   geom_polygon(data = KD.eachID.post.combined$vert.50.df,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
-               fill = "green1",
+               fill = "mediumpurple4",
                alpha = 0.4) +
+  geom_polygon(data = SDBay.eelg.2014.df,
+               aes(x = long,
+                   y = lat,
+                   group = group),
+               fill = "green",
+               alpha = 0.5) +
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
   facet_grid(. ~ ID) +
@@ -195,6 +206,12 @@ p.KDE.pre.day <- ggplot() +
                aes(x = long, y = lat, group = group),
                fill = water.color,
                color = "black") +
+  geom_polygon(data = SDBay.eelg.2008.df,
+               aes(x = long,
+                   y = lat,
+                   group = group),
+               fill = "mediumseagreen",
+               alpha = 0.5) +
   geom_polygon(data = KD.eachID.pre.day$vert.95.df,
                aes(x = long, y = lat,
                    group = group),
@@ -244,6 +261,12 @@ p.KDE.pre.day.night <- ggplot() +
                aes(x = long, y = lat, group = group),
                fill = water.color,
                color = "black") +
+  geom_polygon(data = SDBay.eelg.2008.df,
+               aes(x = long,
+                   y = lat,
+                   group = group),
+               fill = "mediumseagreen",
+               alpha = 0.5) +
   geom_polygon(data = KD.eachID.pre.day$vert.95.df,
                aes(x = long, y = lat,
                    group = group),
@@ -298,24 +321,35 @@ if (save.fig)
 Post period and daytime. 
 
 ```{r}
+
 p.KDE.post.day <- ggplot() + 
   geom_polygon(data = SDBay.df,
                aes(x = long, y = lat, group = group),
                fill = water.color,
                color = "black") +
+  geom_polygon(data = SDBay.eelg.2014.df,
+               aes(x = long,
+                   y = lat,
+                   group = group),
+               fill = eelgrass.color,
+               alpha = 0.5) +
   geom_polygon(data = KD.eachID.post.day$vert.95.df,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
-               fill = "lightcyan",
+               fill = post.95.color,
                alpha = 0.6) +
 
   geom_polygon(data = KD.eachID.post.day$vert.50.df,
                aes(x = long, y = lat,
                    group = group),
                color = "black",
-               fill = "blue4",
+               fill = post.50.color,
                alpha = 0.6) +
+  geom_polygon(data = SDBay.df,
+               aes(x = long, y = lat, group = group),
+               fill = "transparent", #water.color,
+               color = "black") +
   coord_map(xlim = c(-117.145, -117.09),
             ylim = c(32.595, 32.665)) + 
   facet_grid(. ~ ID) +
